# vo-spatial-match

./: LICENSE.md  README.md  pyproject.toml
data/: dublin_postcodes.parquet  vo.parquet  vo_spatial.parquet
data/ed/: electoral_divisions.dbf
src/vo-spatial-match/: extract_vo.py  spatial_transform_vo.py
