[tool.poetry]
name = "vo-spatial-match"
version = "0.1.0"
description = "Link individual buildings from the valuation office dataset to their corresponding small area, electoral district and postcode"
authors = ["Oisin Doherty <oisin.doherty@codema.ie>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
geopandas = "0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
